Home page spacing fix

--- a/styles.css
+++ b/styles.css
@@ -87,6 +87,7 @@ body{
     float: left;
     margin-top: 200px;
     margin-left: 150px;
+    margin-bottom:200px;
     color: rgb(35, 35, 35);
     background-color: rgb(167, 167, 167);
     width: fit-content;
